<resources>
    <string name="app_name">WifiMy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">MAC lookup</string>
    <string name="title_notifications">APs</string>
    <string name="endereco_ip">IP Address:</string>
    <string name="endereco_mac">MAC Address:</string>
    <string name="info_processando">Scanning…</string>
    <string name="pesquisa_mac_mensagem">Lookup for a mac address</string>
    <string name="endereco_mac_hint">MAC Address</string>
    <string name="detalhes_fabricante">Vendor details</string>
    <string name="endereco_mac_label">MAC Address</string>
    <string name="endereco_fabricante">Vendor Address</string>
    <string name="pesquisar">Search</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_busca_endereco_mac" translatable="false">BuscaEnderecoMacActivity</string>
    <string name="title_activity_canais_wifi" translatable="false">CanaisWifiActivity</string>
    <string name="ip" translatable="false">IP</string>
    <string name="mac" translatable="false">MAC</string>
    <string name="ok" translatable="false">OK</string>
    <string name="placeholder_intensidade_wif" translatable="false">%1$d dBm</string>
    <string name="dns1" translatable="false">DNS 1</string>
    <string name="dns2" translatable="false">DNS 2</string>
    <string name="gateway" translatable="false">Gateway</string>
    <string name="traco" translatable="false">--</string>
    <string name="tempo_concessao_d_h_m" translatable="false">%1$d D / %2$d H / %3$d M</string>
    <string name="mac_vendor_api" translatable="false">MacVendors.co</string>
    <string name="direito_icone" translatable="false">Icon made by Pixel Buddha from www.flaticon.com</string>
    <string name="my_email" translatable="false">isds.santana@gmail.com\nhttps://github.com/IsaiasSantana</string>
    <string name="title_activity_splash_screen" translatable="false">WifiMy</string>

    <string name="endereco_mac_desconhecido">MAC address unknown</string>
    <string name="seu_dispositivo">Your device</string>
    <string name="seu_roteador">Your router</string>
    <string name="companhia">Company</string>
    <string name="editar_descricao">Copy</string>
    <string name="endereco">Address</string>
    <string name="endereco_ip_mac">IP and MAC addresses</string>
    <string name="indisponivel">Unavailable.</string>
    <string name="pais">Country</string>
    <string name="tipo">Type</string>
    <string name="erro_endereco_mac_vazio">Please, provide the MAC address.</string>
    <string name="erro_mac_nao_encontrado">MAC address not found.</string>
    <string name="mac_prefixo">Prefix</string>
    <string name="encontrar_dispositivos">Find devices</string>
    <string name="pesquisa_de_mac">MAC Lookup</string>
    <string name="canais_wifi">Access Point</string>
    <string name="wifi_desativado">Wifi unavailable.</string>
    <string name="permissoes_localizacao_rationale">The location permissions are necessary to find the nearby access points.</string>
    <string name="permissoes_titulo_rationale">Permissions</string>
    <string name="configuracoes_app_rationale">Go to settings</string>
    <string name="sinal_wifi_forca">WiFi Signal Strength</string>
    <string name="modelo_desconhecido">Device unknown.</string>
    <string name="distancia_ponto_acesso">Distance: %1$s m</string>
    <string name="canal_ap">Channel: %1$d</string>
    <string name="largura_canal">Channel width: %1$d MHz</string>
    <string name="frequencia_canal">Channel frequency: %1$d MHz</string>
    <string name="mais_informaoes">More info</string>
    <string name="outras_informacoes">Other info</string>
    <string name="endereco_ip_sem_traco">IP Address</string>
    <string name="tempoConcessao">Lease duration</string>
    <string name="mascara_rede">Net mask</string>
    <string name="endereco_servidor">Server address</string>
    <string name="informacoes_dhcp">DHCP info</string>
    <string name="ssid_rede">SSID</string>
    <string name="mostrando_anuncio">Loading ad…</string>
    <string name="json_paises">paises_us.json</string>
    <string name="todos_dispositivos_nao_listados">Sometime not all devices are detected. This can happen if the device does not respond to ping, there is a problem on the network or device is on a VPN.</string>
    <string name="sobre">About</string>
    <string name="politica_privacidade">Privacy policy</string>
    <string name="copiado_com_sucesso">Copied to clip tray.</string>
    <string name="title_roteador">Router</string>
    <string name="acesso_roteador">Access to Router</string>
    <string name="descricao_senha_roteador">"Many devices use the following credentials by default:\n\nUser: admin\nPassword: admin\n\nIf this is not the case, please check the manual for your device. "</string>
    <string name="usuario">User</string>
    <string name="senha">Password</string>
    <string name="logar">Login</string>
    <string name="cancelar">Cancel</string>
    <string name="apoie">Support us</string>
    <string name="mensagem_exibir_anuncio">This will show a ad, OK?</string>
    <string name="tudo_bem">OK</string>
    <string name="agora_nao">not now</string>
    <string name="avaliacao_app">Rate us</string>
    <string name="ordenar_por">Order by</string>
    <string name="intensidade_sinal">Signal Strength</string>
    <string name="distancia_ponto_acesso_descricao">Distance</string>
    <string name="canal">Channel</string>
    <string name="ordem">Order</string>
    <string name="crescente">Ascending</string>
    <string name="decrescente">Descending</string>
    <string name="ordenar">Apply</string>
    <string name="pontos_acesso_por_canal">Access Point per Channel</string>
    <string name="visualiza_canais">APs per channels</string>
    <string name="grafico_linha">Timeline</string>
    <string name="gerador_senha">Password Generator</string>
    <string name="gerar_senha">Generate</string>
    <string name="upper_case">Upper Case</string>
    <string name="lower_case">Lower Case</string>
    <string name="numbers">Numbers</string>
    <string name="caract_especiais">Special Characters</string>
    <string name="password_length">Password Length</string>
    <string name="length_password_8" translatable="false">8</string>
    <string name="length_password_16" translatable="false">16</string>
    <string name="length_password_24" translatable="false">24</string>
    <string name="copy_password">Copy password.</string>
    <string name="senha_nao_gerada">Nothing to copy.</string>
    <string name="dica_senha" translatable="false">********</string>
    <string name="ssid_desconhecido">Unknown SSID</string>
    <string name="opcoes">Options</string>
    <string name="anuncio_nao_carregado">Ad don\'t  loaded.</string>
    <string name="descricao_android_p">Users running Android OS 6+ check if the location service is enabled for the application to see Wifi networks.</string>
</resources>
