<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_16dp"
        android:paddingEnd="@dimen/margin_16dp"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingRight="@dimen/margin_16dp"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="@dimen/margin_16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/titulo_altura"
            android:background="@color/cinza_claro"
            android:gravity="center"
            android:text="@string/opcoes"
            android:textColor="@color/cinza_claro2" />

        <RadioGroup
            android:id="@+id/tipoOrdenacaoRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/nivelRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/intensidade_sinal" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/distanciaRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancia_ponto_acesso_descricao" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/canalRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canal" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/titulo_altura"
            android:background="@color/cinza_claro"
            android:gravity="center"
            android:text="@string/ordem"
            android:textColor="@color/cinza_claro2" />

        <RadioGroup
            android:id="@+id/ordemRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/crescenteRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/crescente" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/decrescenteRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decrescente" />
        </RadioGroup>

    </LinearLayout>

</ScrollView>