<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/wifi"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvMeuGitHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_email"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIconCredit"
                android:layout_marginTop="@dimen/margin_8dp"
                android:paddingLeft="@dimen/margin_16dp"
                android:paddingRight="@dimen/margin_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" android:text="@string/direito_icone"/>

            <TextView
                android:id="@+id/tvMacVendor_co"
                android:layout_marginTop="@dimen/margin_8dp"
                android:paddingLeft="@dimen/margin_16dp"
                android:paddingRight="@dimen/margin_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" android:text="@string/mac_vendor_api"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>