<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSSID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/tam_titulo_row"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/containerForcaSinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvSSID"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgIntensidadeSinal"
                android:layout_width="@dimen/dimen_icone_sinal_wifi"
                android:layout_height="@dimen/dimen_icone_sinal_wifi"
                android:layout_gravity="center"
                android:contentDescription="@string/sinal_wifi_forca"
                android:src="@drawable/ic_wifi_sinal_0" />

            <TextView
                android:id="@+id/tvIntensidadeSinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder_intensidade_wif"
                android:textSize="@dimen/tam_texto_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/containerForcaSinal"
            android:layout_below="@id/tvSSID"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_toEndOf="@id/containerForcaSinal"
            android:layout_toRightOf="@id/containerForcaSinal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEndMac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endereco_mac" />

            <TextView
                android:id="@+id/tvNomeModeloRoteador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endereco_mac" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgCadeado"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_cadeado" />

                <TextView
                    android:id="@+id/tvTipoSegurancaRoteador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:text="@string/endereco_mac" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDistanciaAP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    android:text="@string/distancia_ponto_acesso" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_4dp"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:background="@color/cor_divisor" />

                <TextView
                    android:id="@+id/tvCanalAP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/canal_ap" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvLarguraCanal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center|start"
                android:text="@string/largura_canal" />

            <TextView
                android:id="@+id/tvFrequenciaCanal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center|start"
                android:text="@string/frequencia_canal" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>

